solved header isssue in quiz page on mobile

--- a/client/src/pages/Quiz/Quiz.module.css
+++ b/client/src/pages/Quiz/Quiz.module.css
@@ -78,3 +78,9 @@
   background-color: #3c5165;
   color: white;
 }
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .timeLeft {
+    display: none;
+  }
+}
